@@ -10,6 +10,7 @@ def main():
                  institute_id = 'ukmo',
                  forcing = 'SO',
                  model_id = 'HadCM3',contact="Dusty Baker (even though he was a Dodgers",
+                 parent_experiment_rip="r1i3p2",
                  parent_experiment_id="lgm",branch_time=0)
 
     table = 'CMIP5_Amon'
