@@ -65,6 +65,7 @@ def memory_check():
 
     cmor.dataset('historical', 'ukmo', 'HadCM3', '360_day',
                  institute_id="PCMDI",
+                 parent_experiment_rip="r1i3p2",
                  model_id='HadCM3',forcing='TO',parent_experiment_id="lgm",branch_time=0.,contact="Willie Mays")
     
     table='CMIP5_Amon'
