@@ -1,3 +1,6 @@
+2010-11-11 : updated pywrapper from Jamie
+2010-11-11 : new examples into Makefile for Python
+2010-11-11 : added a flag that says need to cal cmor_grid on some axis (site and location)
 2010-11-05 : new doc updated by Karl.
 2010-11-05 : removed option, for now, to create non-standard calendars because the dates in filenames would be wrong.
 2010-11-05 : file_name=True ignored in python if no var_id is passed to it as well.
